# judgement

./: .dockerignore  .env  .gitignore  README.md  docker-compose.dev.yml  docker-compose.yml
client/: .dockerignore  .eslintrc.js  .gitignore  Dockerfile  craco.config.js  eslint.config.js  index.html  package.json  prettier.config.js  tsconfig.cjs.json  tsconfig.json  tsconfig.node.json  vite.config.ts
client/.husky/: pre-commit
client/public/: index.html
client/src/: App.tsx  CreateLobbyButton.tsx  CreateRoomButton.tsx  Home.tsx  JoinRoomInput.tsx  PlayerNameInput.tsx  antd.customize.less  constants.ts  index.tsx  main.tsx  vite-env.d.ts
client/src/api/: FetchStatus.ts  client.ts  useFetch.ts
client/src/components/: App.tsx  CreateGameButton.tsx  CreateRoomButton.tsx  ErrorPage.tsx  Home.tsx  JoinGameInput.tsx  JoinRoomInput.tsx  LoadingPage.tsx  PageLayout.tsx  PlayerNameInput.tsx  PlayerNameModal.tsx  SetPlayerNamePage.tsx  ensurePlayerWithCookie.tsx  requirePlayerName.tsx  routerState.ts  withPromptPlayerName.tsx
client/src/components/game/: Card.tsx  DebugGameState.tsx  Game.tsx  GameContainer.tsx  GameControls.tsx  Hand.tsx  LeaveGameButton.tsx  cardAssets.ts  useCardWidth.ts
client/src/components/game/judgement/: JudgementContainer.tsx  JudgementGameBidding.tsx  JudgementGamePlaying.tsx  JudgementSettings.tsx  JudgementTable.tsx  dndConfig.ts
client/src/components/room/: DebugGameState.tsx  LeaveRoomButton.tsx  Room.tsx  RoomContainer.tsx  RoomControls.tsx  RoomSettingsWrapper.tsx
client/src/components/room/judgement/: JudgementContainer.tsx  JudgementGame.tsx  JudgementGameBidding.tsx  JudgementGamePlaying.tsx  JudgementSettings.tsx  JudgementTable.tsx
client/src/data/: gameSlice.ts  lobbySlice.ts  playerSlice.ts  reduxHooks.ts  roomSlice.ts  store.ts  usePlayerName.ts
client/src/game/: GameSocket.test.ts  GameSocket.ts  GameSocket.tsx  useConnectedGameSocket.tsx  useGameSocket.ts  withGameSocket.tsx
client/src/lobby/: Lobby.tsx
client/src/room/: Room.tsx  RoomContainer.tsx
client/src/utils/: getCookie.ts  isDev.ts  isObjectWithKeys.ts  url.test.ts  url.ts  useConfiguredSensors.ts  useDraftValue.ts  useElementSize.ts  useIsMounted.ts  useLocationState.ts  useLocationStatePropertyOnce.ts  useMountEffect.ts  useWindowSize.ts
database/: Dockerfile
database/init/: schema.sql
proxy/: Dockerfile
proxy/templates/: default.conf.template
redis/: Dockerfile  redis.conf
server/: .dockerignore  .gitignore  Dockerfile  colored_formatter.py  deps.ts  logging.config.json  main.py  mypy.ini  pyproject.toml  webserver.ts  wsgi.py
server/model_converter/: model_converter.py  package.json  watcher.py
server/model_generator/: .gitignore  color_logs.py  model_generator.py  package.json  watcher.py
server/models/: __init__.py  card.py  deck.py
server/redis_client/: __init__.py  client.py
server/server/: app.py  sio_app.py
server/server/api/: dependencies.py  game.py  player.py  room.py  websocket.py
server/server/data/: connection_manager.py  db.py  game_manager.py  player.py  player_manager.py  room.py  room_manager.py  socket_messager.py
server/server/game/: card.py  core.py  decks.py  judgement.py
server/server/lobby/: __init__.py  connection_manager.py  lobby_handler.py  lobby_manager.py  player.py  room.py
server/server/models/: api.py  camel_model.py  deck.py  game.py  judgement.py  player.py  requests.py  responses.py  room.py  websocket.py
server/server/redis_client/: client.py
server/server/room/: connection_manager.py  player.py  room.py  room_manager.py
server/server/tests/: test_bimultidict.py  test_cards.py  test_decks.py  test_judgement.py
server/server/utils/: bimultidict.py  debug_encoder.py
server/tests/: test_cards.py
