[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = []

[tool.black]
line-length = 90
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.mypy_cache
  | \.venv
)/
'''

[tool.isort]
profile = "black"
src_paths = ["model_generator", "server", "main.py"]

[tool.mypy]
plugins = ["pydantic.mypy"]

follow_imports = "silent"
ignore_missing_imports = true
no_implicit_reexport = true

warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_optional = true

disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true

warn_required_dynamic_aliases = true
warn_untyped_fields = true


[tool.pylint.messages_control]
disable = [
  "missing-class-docstring",
  "missing-function-docstring",
  "missing-module-docstring",
  "too-few-public-methods",
  "too-many-instance-attributes",
  "unsubscriptable-object"
]
extension-pkg-whitelist = ["pydantic"]

[tool.taskipy.tasks]
pre_format = "isort ."
format = "black ."
pre_lint = "task format"
lint = "task lint_mypy && task lint_pylint"
lint_mypy = "mypy model_generator server main.py"
lint_pylint = "pylint model_generator server main.py"
test = "python -m unittest"
yarn = "yarn --cwd ./model_generator/ install --silent"
pre_generate = "task yarn"
pre_generate_watch = "task yarn"
generate = "python -m model_generator.model_generator --out_dir ../client/generated_types"
generate_watch = "python -m model_generator.watcher --out_dir ../client/generated_types"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.88.0"
psycopg2 = "^2.9.3"
python-socketio = { git = "https://github.com/miguelgrinberg/python-socketio.git", rev = "de4d5b5" }
uvicorn = { version = "^0.20.0", extras = ["standard"] }

[tool.poetry.group.debug]
optional = true

[tool.poetry.group.debug.dependencies]
debugpy = "^1.2.1"

[tool.poetry.group.generator]
optional = true

[tool.poetry.group.generator.dependencies]
pydantic-to-typescript = "^1.0.8"
watchgod = "^0.8.2"

[tool.poetry.group.dev.dependencies]
black = "^22.1.0"
isort = "^5.10.1"
mypy = "^0.991"
pylint = "^2.12.2"
taskipy = "^1.6.0"
types-psycopg2 = "^2.9.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
